--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -10,254 +10,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8628f3a7-4b82-40ef-acc2-988bde33e6d0",
+   "id": "dcea0578-f53f-4e93-ad37-b1758d3e5e5b",
    "metadata": {},
    "source": [
-    "### Playing with itertools"
+    "The countdown numbers game is a round on a popular TV show named \"Countdown\". The rules of the round are as follows. The contestants are presented with 6 numbers. The possible values of these 6 numbers are taken from this list {$100, 75, 50, 25, 9, 8, 7, 6, 5, 4, 3, 2, 1$} These 6 numbers are used to create a target. This target is caculated by adding, subtracting, multiplying, and dividing using the 6 numbers given. The contestant may only use each number once to reach the target. However, not all numbers need to be used, the amount used is at the discretion of the contestant. The contestants have 30 seconds to complete their computations."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "068fec6c-1f96-4a62-a708-94d100256854",
+   "cell_type": "markdown",
+   "id": "0c99e1b8-6be7-41d2-92c3-f23de23cbef8",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import itertools as it"
+    "## Example of a Round"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "bb0799d0-7477-4ac0-84fe-0473493fedd5",
+   "cell_type": "markdown",
+   "id": "72924114-23eb-409b-b934-b6aee8d5f36c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 2, 3, 4), (5, 6, 7, 8)]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "#Not efficient, requires a lot of memory and time\n",
-    "def naive_grouper(inputs, n):\n",
-    "    num_groups = len(inputs) // n\n",
-    "    return [tuple(inputs[i*n:(i+1)*n]) for i in range(num_groups)]\n",
-    "\n",
-    "nums = [1,2,3,4,5,6,7,8,9,10]\n",
-    "naive_grouper(nums, 4)"
+    "An example of a round could be {100, 2, 5, 6, 7, 8}"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "7045798c-1a0c-49cc-8420-c33e1d9fadae",
+   "cell_type": "markdown",
+   "id": "744ddba5-f423-4038-9be4-daf2c89849ff",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 2, 3, 4), (5, 6, 7, 8)]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "#More efficient, requires much less memory and is quicker\n",
-    "def better_grouper(inputs, n):\n",
-    "    iters = [iter(inputs)] * n\n",
-    "    return zip(*iters)\n",
-    "\n",
-    "nums = [1,2,3,4,5,6,7,8,9,10]\n",
-    "list(better_grouper(nums, 4))"
+    "With a target of $562$"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "83c0dc78-d0ce-4166-a077-3cc0fea8f6da",
+   "cell_type": "markdown",
+   "id": "694ae5e4-5503-461c-a60b-72903bc59631",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(1, 2, 3, 4), (5, 6, 7, 8), (9, 10, None, None)]\n"
-     ]
-    }
-   ],
    "source": [
-    "#This grouper accounts for n not being a factor of the length of list inputs\n",
-    "def grouper(inputs, n, fillvalue=None):\n",
-    "    iters = [iter(inputs)] * n\n",
-    "    return it.zip_longest(*iters, fillvalue=fillvalue)\n",
-    "\n",
-    "nums = [1,2,3,4,5,6,7,8,9,10]\n",
-    "print(list(grouper(nums, 4)))"
+    "This can be achieved using the following solution: $(100 X 5) + (8 X 7) + 6 = 562$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4714105b-95ad-43bf-9f96-59f0c1ebdf39",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d1c36455-5f18-4c0f-a271-cc4656da7297",
-   "metadata": {},
-   "source": [
-    "## Change for 100"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3fe79ac5-0add-4972-91e4-9c5b225958b8",
-   "metadata": {},
-   "source": [
-    "You have three \\\\$20 dollar bills, five \\\\$10 dollar bills, two \\\\$5 dollar bills, and five \\\\$1 dollar bills. How many ways can you make change for a \\\\$100 dollar bill?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "f723243d-21e5-4071-a307-5207a25dc5c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Firstly, list all bills available\n",
-    "bills = [20, 20, 20, 10, 10, 10, 10, 10, 5, 5, 1, 1, 1, 1, 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "45a6b984-019f-4972-9e24-0516108b18d8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "44\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Empty list we will populate with possible combinations that sum to 100\n",
-    "makes_100 = []\n",
-    "\n",
-    "#This loops through all integers in the range 1 to length of list bills + 1, and checks which combinations will sum to 100.\n",
-    "# It then appends these correct combinations to the list makes_100\n",
-    "for n in range(1, len(bills) + 1):\n",
-    "    for combination in it.combinations(bills, n):\n",
-    "        if sum(combination) == 100:\n",
-    "            makes_100.append(combination)\n",
-    "            \n",
-    "print(len(makes_100))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1dadb16c-24ad-44a7-be5e-bcda9ab5e4f2",
-   "metadata": {},
-   "source": [
-    "There are 44 combinations of bills that can make 100 dollars from the bills we have. However, this is including the duplicate combinations. For example, three 20 dollar bills and four 10 dollar bills using the first,second,third,fourth 10 dollar bills and three 20 dollar bills with four 10 dollar bills using the second,third,fourth,fifth bills. These are the same combination. We must make it a set to remove these."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "5aa67544-76b4-4964-8967-9f75a617ab16",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{(20, 20, 10, 10, 10, 10, 10, 5, 1, 1, 1, 1, 1),\n",
-       " (20, 20, 10, 10, 10, 10, 10, 5, 5),\n",
-       " (20, 20, 20, 10, 10, 10, 5, 1, 1, 1, 1, 1),\n",
-       " (20, 20, 20, 10, 10, 10, 5, 5),\n",
-       " (20, 20, 20, 10, 10, 10, 10)}"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set(makes_100)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "be89e05e-ca15-46e6-bf5f-40c908c5dfd4",
-   "metadata": {},
-   "source": [
-    "There are 5 unique combinations to make 100 from the bills we have."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "55afed61-e755-4c0c-a4dd-e09bf422ad1d",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ff4eec0a-3af5-4c6a-867d-a7549afe7f90",
-   "metadata": {},
-   "source": [
-    "##### How many ways are there to make change for a $100 bill using any number of \\\\$50, \\\\$20, \\\\$10, \\\\$5, and \\\\$1 dollar bills?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "ea47ab3e-c349-4918-978f-8c5d9cc86ce6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "730\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Available types of bills - no set amount of bills, only values available\n",
-    "bills = [50, 20, 10, 5, 1]\n",
-    "\n",
-    "#Empty list for possible combinations to be appended to.\n",
-    "make_100 = []\n",
-    "\n",
-    " \n",
-    "for n in range(1, 101):\n",
-    "    for combination in it.combinations_with_replacement(bills, n):\n",
-    "        if sum(combination) == 100:\n",
-    "            makes_100.append(combination)\n",
-    "            \n",
-    "print(len(makes_100))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3667905-d468-4da6-8d9c-8eaaf4bc707c",
+   "id": "788ecd83-5e66-4e84-821d-75cb27431566",
    "metadata": {},
    "outputs": [],
    "source": []
